# CoalOS

./: CMakeLists.txt  CoalOS.py  Help.txt  README.md
Dependencies/Graphics/: boot.txt  ftpea.txt  nmap.txt  sscrack.txt
Dependencies/Tools/: headlines.txt  iwlist.txt
Dependencies/Tools/Misc/: Snake.py
Dependencies/Tools/Nmap/: nmap1.txt  nmap2.txt
Dependencies/Tools/SysList/: device01.txt  device02.txt  device03.txt  device04.txt  device05.txt  device06.txt
assets/art/: binarys.txt  bootHead.txt
docs/: ascii.md  asthetics.md  main.md  save.md
include/core/: Engine.h  GameState.h  Settings.h
include/glad/: glad.h
include/rendering/: CRTShader.h  TextRenderer.h
include/systems/: CommandParser.h  FileSystem.h  SaveManager.h
include/ui/: AsciiArt.h  Terminal.h
src/: glad.c  main.cpp
src/core/: Engine.cpp  GameState.cpp  Settings.cpp
src/rendering/: CRTShader.cpp  TextRenderer.cpp
src/systems/: CommandParser.cpp  FileSystem.cpp  SaveManager.cpp
src/ui/: AsciiArt.cpp  Terminal.cpp
